--- a/04-Representation/source.tex
+++ b/04-Representation/source.tex
@@ -16,7 +16,7 @@
 
 \section{Introduction}
 
-Nous avons défini dans les chapitres précédents les règles d'apprentissage permettant de construire un modèle d'architectures non-hiérarchiques de cartes auto-organisatrices, le modèle CxSOM.
+Nous avons défini dans les chapitres précédents les règles d'apprentissage permettant de construire un modèle d'architectures non hiérarchiques de cartes auto-organisatrices, le modèle CxSOM.
 La démarche de création de ce modèle se veut synthétique~: les règles d'évolution des modules ont été définies au regard des modèles existants dans la littérature et des considérations inspirées de la biologie. Nous voulons maintenant étudier les propriétés d'organisation et d'apprentissage que présente l'architecture CxSOM.
 
 Dans ces travaux, nous avons choisi de nous concentrer sur un cadre spécifique d'apprentissage~: la mémoire associative.
@@ -63,9 +63,11 @@ Cette expérience permet à la fois d'illustrer les représentations et de souli
     \centering
     \includegraphics[width=0.7\textwidth]{points3.pdf}
     \end{minipage}
-    \caption[Représentations classiques des poids d'une carte de Kohonen]{\label{fig:representation} Représentations possibles des poids d'une carte de Kohonen classique. \`A gauche, les prototypes qui sont des images $16\times 16$ sont tracées en fonction de leur position $p$ sur la grille \footnotemark[1]. \`A droite, les prototypes sont des points en deux dimensions, qui sont tracés ainsi que la grille dans l'espace des entrées.}
+    \caption[Représentations classiques des poids d'une carte de Kohonen]{\label{fig:representation} Représentations possibles des poids d'une carte de Kohonen classique. \`A gauche, les prototypes qui sont des images $16\times 16$ sont tracées en fonction de leur position $p$ sur la grille~\footnotemark[1]. \`A droite, les prototypes sont des points en deux dimensions, qui sont tracés ainsi que la grille dans l'espace des entrées.}
     \end{figure}
-    \footnotetext[1]{Image de SOM tirées du \href{https://frezza.pages.centralesupelec.fr/teachml2/Poly/Poly-ML-SDImetz.pdf}{polycopié d'apprentissage automatique} de CentraleSupelec Metz}
+    \footnotetext[1]{Source~: \href{https://frezza.pages.centralesupelec.fr/teachml2/Poly/Poly-ML-SDImetz.pdf}{polycopié d'apprentissage automatique} de CentraleSupélec Metz}
+
+
 Les cartes de Kohonen sont particulièrement associées à une facilité de représentation et de visualisation. Leur nombre réduit de prototypes et leur topologie de faible dimension permet d'en tracer une représentation visuelle interprétable.
 
 Deux représentations sont généralement privilégiées~:
@@ -150,10 +152,10 @@ Dans ce cas,
 \end{equation}
 
 L'utilisation de variables d'entrées multimodales placées sur une variété de dimension inférieure, est un cadre d'expériences généralisable. 
-Il a en effet été proposé qu'en pratique, des variables en grande dimension, telles que des images, sont positionnées sur des variétés de dimension plus faible, dont un exemple est donné en figure~\ref{fig:U} \cite{Pless2009ASO}.
+Il a en effet été proposé qu'en pratique, des variables en grande dimension, telles que des images, sont positionnées sur des variétés de dimension plus faible, dont un exemple tiré de~\cite{Pless2009ASO} est donné en figure~\ref{fig:U} 
 
 Cette paramétrisation peut également être considérée comme un cas particulier de réduction de dimension des entrées sans perte d'information.
-Cependant, les représentations proposées pourront également être adaptables à une variable $U$ obtenue par une méthode de réduction de dimension avec perte d'information (par exemple par une analyse en composantes principales).
+Les représentations proposées pourront également être adaptables à une variable $U$ obtenue par une méthode de réduction de dimension avec perte d'information (par exemple par une analyse en composantes principales).
 
 \begin{figure}
     \begin{minipage}{0.4\textwidth}
@@ -218,7 +220,7 @@ Ces tracés sont réalisés en figure~\ref{fig:erreur} pour l'expérience exempl
 On pourrait également mesurer une erreur quadratique moyenne pour déterminer numériquement cette erreur de quantification, mais la représentation en nuage de points est, à défaut d'être quantitative, plus qualitative. 
 En effet, ici, on observe que le nuage montre une structure \og en étages \fg{}. Nous reviendrons sur ce point par la suite, nous contentant de souligner ici que la représentation graphique exprime une propriété que la simple mesure d'erreur n'aurait pas mise en évidence.
 
-Cette représentation nous informe sur la qualité de quantification dans une seule carte, relativement à une seule modalité. Cette seule représentation est insuffisante à elle seule pour comprendre plus en détail le comportement d'une architecture de cartes~: il nous faut également définir des méthodes de représentation permettant d'évaluer comment la structure globale du modèle d'entrées est apprise par l'architecture dans son ensemble.
+Cette représentation nous informe sur la qualité de quantification dans une seule carte, relativement à une seule modalité. Cette seule représentation est insuffisante pour comprendre plus en détail le comportement d'une architecture de cartes~: il nous faut également définir des méthodes de représentation permettant d'évaluer comment la structure globale du modèle d'entrées est apprise par l'architecture dans son ensemble.
 
 \begin{figure}
     \centering
@@ -268,7 +270,7 @@ Nous nous appuierons sur cette représentation dans les chapitres suivants pour 
 \subsection{Représentation de la variable latente selon les positions des BMU}\label{sec:u_bmu}
 
 La représentation cartographique nous a permis de constater que sur chaque carte $M\m{i}$, les BMU se disposent selon les valeurs de l'entrée externe $\inpx\m{i}$, mais aussi selon les valeurs d'entrées des autres cartes, c'est-à-dire du modèle d'entrées.
-Nous avons introduit en section \ref{sec:U} une variable $U$ comme une façon de représenter le modèle d'entrées. 
+Nous avons introduit en section~\ref{sec:U} une variable $U$ qui représente le modèle d'entrées. 
 Nous proposons donc une autre manière de mettre en évidence le comportement d'organisation des BMU selon le modèle d'entrées, en réalisant le tracé de $U$ en fonction de la position du BMU correspondante $\bmu\m{i}$.
 
 Cette représentation est réalisée en figure~\ref{fig:piu} pour l'exemple à deux cartes.
