--- a/06b-Analyse-2D/source.tex
+++ b/06b-Analyse-2D/source.tex
@@ -123,9 +123,9 @@ En haut, nous représentons les poids contextuels de la carte sous forme de cart
 	\end{minipage}
 	\begin{minipage}{\textwidth}
 		\includegraphics[width=0.7\textwidth]{we_rc002_afterbug_step10.pdf}
-		\caption{Tracé des poids externes contextuels d'une architecture de cartes, organisés sur une sphère dans un espace 4D, avec $r_e =0.2$ et $r_c = 0.02$.
+		\caption{Tracé des poids externes et contextuels d'une architecture de cartes, organisés sur une sphère dans un espace 4D, avec $r_e =0.2$ et $r_c = 0.02$.
 		En bas, les poids externes sont positionnés en fonction de leur valeur $\w_e|_x, \w_e|_y$ et reliés aux n\oe{}uds voisins. Pour une raison de lisibilité, nous avons représenté seulement une partie des connexions, les cartes étant de taille $100 \times 100$. Le coin de position $(0,0)$ de la carte est marqué par le point rouge. Cette représentation permet d'observer directement que les poids externes de chaque carte se déplient sur les entrées externes qui lui ont été présentées, dont on retrouve le tracé en figure~\ref{fig:sphere_inputs}.
-		En haut, nous traçons la valeur des poids contextuels. Nous colorons le point situé en position $p|_x, p|_y$ de chaque carte en fonction de la valeur 2D de son poids externe codé par la carte de coloration à droite. Cette représentation fait apparaître une organisation en motifs spatiaux pseudo-périodiques, rappelant le comportement observé en 1D.
+		En haut, nous traçons la valeur des poids contextuels. Nous colorons le point situé en position $p|_x, p|_y$ de chaque carte en fonction de la valeur 2D de son poids contextuelles codé par la carte de coloration à droite. Cette représentation fait apparaître une organisation en motifs spatiaux pseudo-périodiques, rappelant le comportement observé en 1D.
 		\label{fig:2som_s_002_wc}}
 		\end{minipage}
 \end{figure}
@@ -134,7 +134,7 @@ En haut, nous représentons les poids contextuels de la carte sous forme de cart
 L'organisation de $\w_e$ montre que chaque carte représente ses entrées externes de la même façon qu'une carte 2D classique~: les poids externes se déplient sur le disque dans lequel sont tirées leurs entrées externes. 
 L'organisation de $\w_c$ fait apparaître des motifs oscillant spatialement dans chaque carte, qui rappellent les motifs présents en une dimension, cf. figure~\ref{fig:w}.
 Ces motifs pseudo-périodiques sont de taille équivalente et sont répartis sur toute la surface de la carte. 
-L'organisation des poids contextuels en motifs se transpose bien des cartes 1D aux cartes 2D. La forme des motifs semble plus variable sur des cartes 1D, la 2D apportant une dimension supplémentaire à l'organisation.
+L'organisation des poids contextuels en motifs se transpose bien des cartes 1D aux cartes 2D. La forme des motifs semble plus variée que sur des cartes 1D, la 2D apportant une dimension supplémentaire à l'organisation.
 
 \subsection{Relation entre $U$ et $\bmu$ \label{par:U_bmu2D}}
 
@@ -227,7 +227,7 @@ Les valeurs des indicateurs trouvées pour $r_c = 0.05$ sont similaires au cas $
 
 Nous nous intéressons enfin à l'organisation d'une architecture de deux cartes prenant des entrées $(\inpx\m{1}, \inpx\m{2}) \in [0,1]^2 \times [0,1]^2$ indépendantes.
 Nous avons observé la formation de motifs de poids contextuels sur des cartes en deux dimensions lorsqu'elles apprennent les entrées tirées sur la sphère. Nous voulons observer si ces motifs se créent également dans le cas où les deux entrées externes sont indépendantes.
-D'après les comportements observés sur des cartes 1D, nous nous attendrions alors à ce que chaque carte présente des zones, dans lesquelles les poids contextuels forment une sous-carte de tout $[0,1]^2$.
+D'après les comportements observés sur des cartes 1D, nous nous attendrions à ce que chaque carte présente des zones, dans lesquelles les poids contextuels forment une sous-carte de tout $[0,1]^2$.
 Les rayons de voisinage sont pris à $r_e = 0.2, r_c = 0.02$.
 
 Les valeurs des poids externes et contextuels obtenus après apprentissage sont tracés en figure \ref{fig:2som_cub_wc}.
@@ -244,7 +244,7 @@ Au contraire, nous pouvons aussi envisager ce comportement comme une capacité d
 
 \begin{figure}
 	\centering\includegraphics[width=\textwidth]{w_cub_rc002.pdf}
-	\caption{Poids des cartes $M\m{1}$ et $M\m{2}$ après 200000 itérations d'apprentissage. Les poids contextuels, en haut, sont tracés en carte de coloration~; les poids externes, en bas, sont tracés dans l'espace des entrées.
+	\caption{Poids des cartes $M\m{1}$ et $M\m{2}$ après 200000 itérations d'apprentissage sur les entrées indépendantes. Les poids contextuels, en haut, sont tracés en carte de coloration~; les poids externes, en bas, sont tracés dans l'espace des entrées.
 	Nous constatons que les poids contextuels ne se déplient pas sur toutes les valeurs prises par les BMU et restent centrés vers le milieu de la carte. \label{fig:2som_cub_wc}}
 \end{figure}
 
@@ -284,7 +284,7 @@ lorsque la carte $M^{(2)}$ ne reçoit pas d'entrée externe. Les cartes $M^{(1)}
 
 \section{Conclusion}
 
-Les expériences proposées dans ce chapitre donnent une  première idée des comportements auxquels on peut attendre des architectures de cartes en deux dimensions.
+Les expériences proposées dans ce chapitre donnent une première idée des comportements que l'on peut attendre des architectures de cartes en deux dimensions.
 Pour cette analyse, nous nous sommes appuyée sur la méthode d'étude de carte proposée tout au long de cette thèse.
 Nous nous sommes intéressée à des architectures de deux et trois cartes 2D, apprenant des modalités 2D. Le modèle d'entrées prises sur une sphère est un pendant en 4D du modèle d'entrées 1D prises sur le cercle. Dans ce modèle, chaque valeur de $\inpx\m{1}$ ainsi que chaque valeur de $\inpx\m{2}$ peut correspondre à deux valeurs de $U$
 
