--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,13 +1,13 @@
 \chapter*{Conclusion}
 
 Cette thèse se place dans un but d'exploration de mécanismes de calcul et d'apprentissage pouvant émerger de l'association de modules en architecture, ici à partir de cartes auto-organisatrices.
-Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules, de façon non supervisée. Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral.
+Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules et de façon non supervisée. Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral.
 L'utilisation de cartes auto-organisatrices en tant que modules est en particulier motivée par leur capacité à représenter un espace d'entrée en une information positionnelle de faible dimension. Cette information rejoint l'organisation observée dans le cortex cérébral, et se place comme une information simple à transmettre au sein d'une architecture.
 Les travaux menés précédemment dans l'équipe de recherche, en \cite{menard05,khouzam_2013,baheux_towards_2014} ont proposé un modèle original d'interface entre cartes, s'appuyant sur une recherche de consensus au sein de l'architecture. Cette thèse se place dans la continuité de ces travaux et souhaite développer le modèle d'architecture et analyser les mécanismes d'organisation émergeant des règles de calcul du modèle. 
 
 
-Ce manuscrit présente CxSOM \emph{Consensus-driven multi-SOM}. Ce modèle permet d'associer des cartes en architecture modulaires.
-Nous avons suivi une démarche de construction~: à partir des architectures existantes et des modèles étudiés dans notre équipe de recherche, nous avons proposé le modèle d'architecture CxSOM, puis avons étudié expérimentalement son comportement sur des blocs de base, en vue d'un développement futur.
+Ce manuscrit présente CxSOM \emph{Consensus-driven multi-SOM}. Ce modèle permet d'associer des cartes en architectures modulaires.
+Nous avons suivi une démarche synthétique~: à partir des architectures existantes et des modèles étudiés dans notre équipe de recherche, nous avons proposé le modèle d'architecture CxSOM, puis avons étudié expérimentalement son comportement sur des blocs de base, en vue d'un développement futur.
 
 Dans cette démarche, le chapitre~\ref{chap:architectures} se présente comme une revue des modèles existants d'architectures hiérarchiques et non-hiérarchiques construites à base de cartes auto-organisatrices. 
 Nous avons unifié les notations de ces modèles issus de différents domaines de l'informatique. Cette revue nous a permis d'identifier les mécanismes et structures communs à ces architectures.
@@ -42,7 +42,7 @@ Cette méthode d'analyse nous a fourni un cadre permettant de mieux analyser le 
 Ces expériences sont présentées aux chapitres \ref{chap:analyse} et \ref{chap:analyse2D}.
 Nous avons dégagé des comportements d'organisation à deux échelles, qui nous apparaissent comme inhérents aux règles de calculs définies dans CxSOM. Chaque carte est globalement organisée selon son entrée externe. Les BMU se répartissent dans un ensemble de zones de la carte en fonction de cette entrée externe, séparées par des zones mortes. Au sein de chaque région, les BMU sont définis en fonction de l'entrée contextuelle. 
 Cette organisation permet à chaque carte de définir son BMU en fonction de toutes les entrées de l'architecture, et non seulement son entrée externe. Ce comportement marque un encodage du modèle d'entrée dans chacune des cartes, donc l'apprentissage des relations entre les entrées.
-Pour permettre cette encodage, nous devons prendre le rayon de voisinage externe $h_e$ supérieur au rayon de voisinage contextuel. Ces deux élasticités permettent aux poids contextuels de s'organiser de façon subordonnée aux poids externes.
+Pour permettre cet encodage, nous devons prendre le rayon de voisinage externe $h_e$ supérieur au rayon de voisinage contextuel. Ces deux élasticités permettent aux poids contextuels de s'organiser de façon subordonnée aux poids externes.
 
 
 Nous avons ensuite montré qu'une architecture CxSOM est capable de générer une prédiction dans une des cartes de l'architecture à laquelle on n'a pas présenté d'entrée externe lors du test. 
@@ -63,7 +63,11 @@ Cette formation de motifs ainsi que l'organisation à plusieurs échelles d'une 
 Ces deux observations laissent envisager un passage possible à de grandes architectures, à accompagner d'une étude paramétrique approfondie.
 Notons que les travaux d'analyse de CxSOM dont nous avons présenté les résultats ont été accompagnés d'un travail d'élaboration, en collaboration avec Hervé Frezza-Buet, d'une librairie C++ et python permettant le calcul et les tracés des nombreuses variables d'état qui composent une architecture de cartes.
 Cette librairie \footnote{\url{https://github.com/HerveFrezza-Buet/cxsom}}, aujourd'hui plus aboutie qu'au moment où nous avons commencé nos expérimentations, facilitera grandement l'étude et la conception d'architectures comportant de nombreuses cartes.
-Cette étude de grandes architectures pourra s'appuyer sur les méthodes de représentation et d'analyse que nous avons proposé au cours de ce manuscrit. Notons que les indicateurs et représentations que nous avons proposées concernent l'organisation à l'échelle d'une carte. Une perspective d'amélioration de cette méthode de représentation est de chercher à évaluer une organisation d'un point de vue global à l'architecture.
+
+
+Cette étude de grandes architectures pourra s'appuyer sur les méthodes de représentation et d'analyse que nous avons proposé au cours de ce manuscrit. 
+Notons que les indicateurs et représentations que nous avons proposées concernent l'organisation à l'échelle d'une carte. Une perspective d'amélioration de cette méthode de représentation est de chercher à évaluer une organisation d'un point de vue global à l'architecture.
+
 
 %Limites et perspectives 
 Les observations réalisées dans les chapitres \ref{chap:analyse}, \ref{chap:indicateur} et \ref{chap:analyse2D} nous permettent également d'envisager des limitations générales au modèle actuel, qui seront des pistes d'études possibles pour envisager des améliorations ou des applications de l'architecture.
